--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,18 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "@core/*": [
+        "app/core/*"
+      ],
+      "@shared/*": [
+        "app/shared/*"
+      ],
+      "@catalog/*": [
+        "app/catalog/*"
+      ],
+    }
   },
   "files": [
     "src/main.ts"
